[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/scripts/levels/4Collector.gd" type="Script" id=1]
[ext_resource path="res://scenes/backgrounds/BackgroundSecondAct.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/env/Pause.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/4Collector.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/env/DeathScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/env/Finish.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/env/HoloWall.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/env/TileMap.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/env/KoumissBottle.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/env/MovingPlatform.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enemies/Saw.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/env/Target.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/env/Lever.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/enemies/ToothDwarf.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/enemies/ToothWarrior.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/Mirza.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/env/Dialogue_node.tscn" type="PackedScene" id=17]

[node name="4Collector" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" parent="." instance=ExtResource( 2 )]
layer = -1

[node name="Pause" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="DeathScreen" parent="." instance=ExtResource( 5 )]

[node name="Finish" parent="." instance=ExtResource( 6 )]
position = Vector2( -149.667, 966.558 )
next_level = "5Seals"
number_of_level = 4

[node name="HoloWall1" parent="." instance=ExtResource( 7 )]
position = Vector2( 223.913, 664.878 )
rotation = 1.5708

[node name="HoloWall2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1956.38, -1415.81 )

[node name="HoloWall3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1554.93, -1416.12 )
on = false

[node name="HoloWall5" parent="." instance=ExtResource( 7 )]
position = Vector2( 546.131, -1759.87 )
rotation = 1.5708

[node name="TileMap" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( -3735557, 5, 0, -3670021, 5, 0, -3604485, 5, 0, -3538949, 5, 0, -3473413, 5, 0, -3407877, 5, 0, -3342341, 5, 0, -3276805, 5, 0, -3211269, 5, 0, -3145733, 5, 0, -3080197, 5, 0, -3014661, 5, 0, -2949125, 5, 0, -2883589, 5, 0, -2818053, 5, 0, -2752517, 5, 0, -2686981, 5, 0, -2621445, 5, 0, -2555909, 5, 0, -2490373, 5, 0, -2424837, 5, 0, -2359301, 5, 0, -2293765, 5, 0, -2228229, 5, 0, -2162693, 5, 0, -2228220, 5, 0, -2228219, 5, 0, -2097157, 5, 0, -2031621, 5, 0, -1966085, 5, 0, -1900549, 5, 0, -1835013, 5, 0, -1769477, 5, 0, -1834994, 5, 0, -1834993, 5, 0, -1834992, 5, 0, -1834991, 5, 0, -1834990, 5, 0, -1834989, 5, 0, -1834988, 5, 0, -1834987, 5, 0, -1834986, 5, 0, -1834985, 5, 0, -1834984, 5, 0, -1834983, 5, 0, -1834982, 5, 0, -1834981, 5, 0, -1834980, 5, 0, -1834979, 5, 0, -1834978, 5, 0, -1834977, 5, 0, -1834976, 5, 0, -1834975, 5, 0, -1703941, 5, 0, -1769455, 5, 0, -1638405, 5, 0, -1703919, 5, 0, -1572869, 5, 0, -1638383, 5, 0, -1507333, 5, 0, -1572847, 5, 0, -1441797, 5, 0, -1507311, 5, 0, -1376261, 5, 0, -1441775, 5, 0, -1310725, 5, 0, -1376239, 5, 0, -1245189, 5, 0, -1310703, 5, 0, -1179653, 5, 0, -1245167, 5, 0, -1114117, 5, 0, -1179631, 5, 0, -1048581, 5, 0, -1114098, 12, 0, -1114097, 0, 0, -1114096, 0, 0, -1114095, 14, 0, -1114094, 0, 0, -1114093, 11, 0, -1114090, 12, 0, -1114089, 0, 0, -1114088, 0, 0, -1114087, 0, 0, -1114086, 0, 0, -1114085, 0, 0, -1114084, 0, 0, -1114083, 0, 0, -1114082, 0, 0, -1114081, 0, 0, -1114080, 0, 0, -1114079, 11, 0, -983045, 5, 0, -1048562, 5, 0, -1048561, 6, 0, -1048560, 6, 0, -1048559, 6, 0, -1048558, 6, 0, -1048557, 5, 0, -1048554, 5, 0, -1048553, 6, 0, -1048552, 6, 0, -1048551, 6, 0, -1048550, 6, 0, -1048549, 6, 0, -1048548, 6, 0, -1048547, 6, 0, -1048546, 6, 0, -1048545, 6, 0, -1048544, 6, 0, -1048543, 5, 0, -917509, 5, 0, -983026, 5, 0, -983025, 5, 0, -983024, 5, 0, -983023, 5, 0, -983022, 5, 0, -983021, 5, 0, -983018, 5, 0, -983017, 5, 0, -983016, 5, 0, -983015, 5, 0, -983014, 5, 0, -983013, 5, 0, -983012, 5, 0, -983011, 5, 0, -983010, 5, 0, -983009, 5, 0, -983008, 5, 0, -983007, 5, 0, -851973, 5, 0, -786437, 5, 0, -720901, 5, 0, -655365, 5, 0, -589829, 5, 0, -524293, 5, 0, -458757, 5, 0, -393221, 5, 0, -327685, 5, 0, -262149, 5, 0, -196613, 5, 0, -131077, 5, 0, -65541, 5, 0, -131039, 12, 0, -131038, 0, 0, -131037, 0, 0, -131036, 0, 0, -131035, 0, 0, -131034, 0, 0, -131033, 0, 0, -131032, 0, 0, -131031, 0, 0, -131030, 0, 0, -131029, 0, 0, -131028, 0, 0, -131027, 0, 0, -131026, 1, 0, -131025, 2, 0, -5, 5, 0, -65503, 5, 0, -65502, 6, 0, -65501, 6, 0, -65500, 6, 0, -65499, 6, 0, -65498, 6, 0, -65497, 6, 0, -65496, 6, 0, -65495, 6, 0, -65494, 6, 0, -65493, 6, 0, -65492, 6, 0, -65491, 6, 0, -65490, 6, 0, -65489, 7, 0, -65488, 2, 0, 65531, 5, 0, 33, 5, 0, 34, 6, 0, 35, 6, 0, 36, 6, 0, 37, 6, 0, 38, 6, 0, 39, 6, 0, 40, 6, 0, 41, 6, 0, 42, 6, 0, 43, 6, 0, 44, 6, 0, 45, 6, 0, 46, 6, 0, 47, 6, 0, 48, 7, 0, 49, 2, 0, 131067, 5, 0, 65569, 5, 0, 65570, 6, 0, 65571, 6, 0, 65572, 6, 0, 65573, 6, 0, 65574, 6, 0, 65575, 6, 0, 65576, 6, 0, 65577, 6, 0, 65578, 6, 0, 65579, 6, 0, 65580, 6, 0, 65581, 6, 0, 65582, 6, 0, 65583, 6, 0, 65584, 6, 0, 65585, 7, 0, 65586, 2, 0, 196603, 5, 0, 131105, 5, 0, 131106, 6, 0, 131107, 6, 0, 131108, 6, 0, 131109, 6, 0, 131110, 6, 0, 131111, 6, 0, 131112, 6, 0, 131113, 6, 0, 131114, 6, 0, 131115, 6, 0, 131116, 6, 0, 131117, 6, 0, 131118, 6, 0, 131119, 6, 0, 131120, 6, 0, 131121, 6, 0, 131122, 5, 0, 262139, 5, 0, 196641, 5, 0, 196642, 6, 0, 196643, 6, 0, 196644, 6, 0, 196645, 6, 0, 196646, 6, 0, 196647, 6, 0, 196648, 6, 0, 196649, 6, 0, 196650, 6, 0, 196651, 6, 0, 196652, 6, 0, 196653, 6, 0, 196654, 6, 0, 196655, 6, 0, 196656, 6, 0, 196657, 6, 0, 196658, 5, 0, 196670, 13, 0, 327675, 5, 0, 262177, 5, 0, 262178, 6, 0, 262179, 6, 0, 262180, 6, 0, 262181, 6, 0, 262182, 6, 0, 262183, 6, 0, 262184, 6, 0, 262185, 6, 0, 262186, 6, 0, 262187, 6, 0, 262188, 6, 0, 262189, 6, 0, 262190, 6, 0, 262191, 6, 0, 262192, 6, 0, 262193, 6, 0, 262194, 5, 0, 262206, 5, 0, 393211, 5, 0, 327713, 5, 0, 327714, 6, 0, 327715, 6, 0, 327716, 6, 0, 327717, 6, 0, 327718, 6, 0, 327719, 6, 0, 327720, 6, 0, 327721, 6, 0, 327722, 6, 0, 327723, 6, 0, 327724, 6, 0, 327725, 6, 0, 327726, 6, 0, 327727, 6, 0, 327728, 6, 0, 327729, 6, 0, 327730, 5, 0, 327733, 13, 0, 327742, 5, 0, 458747, 5, 0, 393249, 5, 0, 393250, 6, 0, 393251, 6, 0, 393252, 6, 0, 393253, 6, 0, 393254, 6, 0, 393255, 6, 0, 393256, 6, 0, 393257, 6, 0, 393258, 6, 0, 393259, 6, 0, 393260, 6, 0, 393261, 6, 0, 393262, 6, 0, 393263, 6, 0, 393264, 6, 0, 393265, 6, 0, 393266, 5, 0, 393269, 5, 0, 393278, 5, 0, 393299, 13, 0, 524283, 5, 0, 458785, 5, 0, 458786, 6, 0, 458787, 6, 0, 458788, 6, 0, 458789, 6, 0, 458790, 6, 0, 458791, 6, 0, 458792, 6, 0, 458793, 6, 0, 458794, 6, 0, 458795, 6, 0, 458796, 6, 0, 458797, 6, 0, 458798, 6, 0, 458799, 6, 0, 458800, 6, 0, 458801, 6, 0, 458802, 5, 0, 458805, 5, 0, 458814, 5, 0, 458835, 5, 0, 589819, 5, 0, 524321, 5, 0, 524322, 6, 0, 524323, 6, 0, 524324, 6, 0, 524325, 6, 0, 524326, 6, 0, 524327, 6, 0, 524328, 6, 0, 524329, 6, 0, 524330, 6, 0, 524331, 6, 0, 524332, 6, 0, 524333, 6, 0, 524334, 6, 0, 524335, 6, 0, 524336, 6, 0, 524337, 6, 0, 524338, 5, 0, 524341, 5, 0, 524350, 5, 0, 524371, 5, 0, 655355, 5, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 11, 0, 589830, 12, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 11, 0, 589857, 5, 0, 589858, 6, 0, 589859, 6, 0, 589860, 6, 0, 589861, 6, 0, 589862, 6, 0, 589863, 6, 0, 589864, 6, 0, 589865, 6, 0, 589866, 6, 0, 589867, 6, 0, 589868, 6, 0, 589869, 6, 0, 589870, 6, 0, 589871, 6, 0, 589872, 6, 0, 589873, 6, 0, 589874, 5, 0, 589877, 5, 0, 589886, 5, 0, 589907, 5, 0, 720891, 5, 0, 720892, 6, 0, 720893, 6, 0, 720894, 6, 0, 720895, 6, 0, 655360, 5, 0, 655366, 5, 0, 655367, 6, 0, 655368, 6, 0, 655369, 6, 0, 655370, 6, 0, 655371, 6, 0, 655372, 6, 0, 655373, 6, 0, 655374, 6, 0, 655375, 6, 0, 655376, 6, 0, 655377, 5, 0, 655393, 5, 0, 655394, 6, 0, 655395, 6, 0, 655396, 6, 0, 655397, 6, 0, 655398, 6, 0, 655399, 6, 0, 655400, 6, 0, 655401, 6, 0, 655402, 6, 0, 655403, 6, 0, 655404, 6, 0, 655405, 6, 0, 655406, 6, 0, 655407, 6, 0, 655408, 6, 0, 655409, 6, 0, 655410, 5, 0, 655413, 5, 0, 655422, 5, 0, 655428, 12, 0, 655429, 0, 0, 655430, 0, 0, 655431, 0, 0, 655432, 0, 0, 655433, 0, 0, 655434, 0, 0, 655435, 11, 0, 655443, 5, 0, 786427, 5, 0, 786428, 6, 0, 786429, 6, 0, 786430, 6, 0, 786431, 6, 0, 720896, 5, 0, 720902, 5, 0, 720903, 6, 0, 720904, 6, 0, 720905, 6, 0, 720906, 6, 0, 720907, 6, 0, 720908, 6, 0, 720909, 6, 0, 720910, 6, 0, 720911, 6, 0, 720912, 6, 0, 720913, 5, 0, 720929, 5, 0, 720930, 6, 0, 720931, 6, 0, 720932, 6, 0, 720933, 6, 0, 720934, 6, 0, 720935, 6, 0, 720936, 6, 0, 720937, 6, 0, 720938, 6, 0, 720939, 6, 0, 720940, 6, 0, 720941, 6, 0, 720942, 6, 0, 720943, 6, 0, 720944, 6, 0, 720945, 6, 0, 720946, 5, 0, 720949, 5, 0, 720958, 5, 0, 720964, 5, 0, 720965, 6, 0, 720966, 6, 0, 720967, 6, 0, 720968, 6, 0, 720969, 6, 0, 720970, 6, 0, 720971, 5, 0, 720979, 5, 0, 851963, 5, 0, 851964, 5, 0, 851965, 5, 0, 851966, 5, 0, 851967, 5, 0, 786432, 5, 0, 786438, 5, 0, 786439, 6, 0, 786440, 6, 0, 786441, 6, 0, 786442, 6, 0, 786443, 6, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 6, 0, 786448, 6, 0, 786449, 5, 0, 786465, 5, 0, 786466, 6, 0, 786467, 6, 0, 786468, 6, 0, 786469, 6, 0, 786470, 6, 0, 786471, 6, 0, 786472, 6, 0, 786473, 6, 0, 786474, 6, 0, 786475, 6, 0, 786476, 6, 0, 786477, 6, 0, 786478, 6, 0, 786479, 6, 0, 786480, 6, 0, 786481, 6, 0, 786482, 5, 0, 786485, 5, 0, 786494, 5, 0, 786500, 5, 0, 786501, 6, 0, 786502, 6, 0, 786503, 6, 0, 786504, 6, 0, 786505, 6, 0, 786506, 6, 0, 786507, 5, 0, 786515, 5, 0, 917499, 5, 0, 851974, 5, 0, 851975, 6, 0, 851976, 6, 0, 851977, 6, 0, 851978, 6, 0, 851979, 6, 0, 851980, 6, 0, 851981, 6, 0, 851982, 6, 0, 851983, 6, 0, 851984, 6, 0, 851985, 5, 0, 852001, 5, 0, 852002, 6, 0, 852003, 6, 0, 852004, 6, 0, 852005, 6, 0, 852006, 6, 0, 852007, 6, 0, 852008, 6, 0, 852009, 6, 0, 852010, 6, 0, 852011, 6, 0, 852012, 6, 0, 852013, 6, 0, 852014, 6, 0, 852015, 6, 0, 852016, 6, 0, 852017, 6, 0, 852018, 5, 0, 852021, 5, 0, 852030, 5, 0, 852036, 5, 0, 852037, 6, 0, 852038, 6, 0, 852039, 6, 0, 852040, 6, 0, 852041, 6, 0, 852042, 6, 0, 852043, 5, 0, 852051, 5, 0, 983035, 5, 0, 917510, 5, 0, 917511, 6, 0, 917512, 6, 0, 917513, 6, 0, 917514, 6, 0, 917515, 6, 0, 917516, 6, 0, 917517, 6, 0, 917518, 6, 0, 917519, 6, 0, 917520, 6, 0, 917521, 5, 0, 917537, 5, 0, 917538, 6, 0, 917539, 6, 0, 917540, 6, 0, 917541, 6, 0, 917542, 6, 0, 917543, 6, 0, 917544, 6, 0, 917545, 6, 0, 917546, 6, 0, 917547, 6, 0, 917548, 6, 0, 917549, 6, 0, 917550, 6, 0, 917551, 6, 0, 917552, 6, 0, 917553, 6, 0, 917554, 5, 0, 917557, 5, 0, 917566, 5, 0, 917572, 5, 0, 917573, 6, 0, 917574, 6, 0, 917575, 6, 0, 917576, 6, 0, 917577, 6, 0, 917578, 6, 0, 917579, 5, 0, 917587, 5, 0, 1048571, 5, 0, 983046, 5, 0, 983047, 6, 0, 983048, 6, 0, 983049, 6, 0, 983050, 6, 0, 983051, 6, 0, 983052, 6, 0, 983053, 6, 0, 983054, 6, 0, 983055, 6, 0, 983056, 6, 0, 983057, 5, 0, 983073, 5, 0, 983074, 6, 0, 983075, 6, 0, 983076, 6, 0, 983077, 6, 0, 983078, 6, 0, 983079, 6, 0, 983080, 6, 0, 983081, 6, 0, 983082, 6, 0, 983083, 6, 0, 983084, 6, 0, 983085, 6, 0, 983086, 6, 0, 983087, 6, 0, 983088, 6, 0, 983089, 6, 0, 983090, 5, 0, 983093, 5, 0, 983102, 5, 0, 983108, 5, 0, 983109, 6, 0, 983110, 6, 0, 983111, 6, 0, 983112, 6, 0, 983113, 6, 0, 983114, 6, 0, 983115, 5, 0, 983123, 5, 0, 1114107, 5, 0, 1048582, 5, 0, 1048583, 6, 0, 1048584, 6, 0, 1048585, 6, 0, 1048586, 6, 0, 1048587, 6, 0, 1048588, 6, 0, 1048589, 6, 0, 1048590, 6, 0, 1048591, 6, 0, 1048592, 6, 0, 1048593, 5, 0, 1048609, 5, 0, 1048610, 6, 0, 1048611, 6, 0, 1048612, 6, 0, 1048613, 6, 0, 1048614, 6, 0, 1048615, 6, 0, 1048616, 6, 0, 1048617, 6, 0, 1048618, 6, 0, 1048619, 6, 0, 1048620, 6, 0, 1048621, 6, 0, 1048622, 6, 0, 1048623, 6, 0, 1048624, 6, 0, 1048625, 6, 0, 1048626, 5, 0, 1048629, 5, 0, 1048638, 5, 0, 1048644, 5, 0, 1048645, 6, 0, 1048646, 6, 0, 1048647, 6, 0, 1048648, 6, 0, 1048649, 6, 0, 1048650, 6, 0, 1048651, 5, 0, 1048659, 5, 0, 1179643, 5, 0, 1114118, 5, 0, 1114119, 6, 0, 1114120, 6, 0, 1114121, 6, 0, 1114122, 6, 0, 1114123, 6, 0, 1114124, 6, 0, 1114125, 6, 0, 1114126, 6, 0, 1114127, 6, 0, 1114128, 6, 0, 1114129, 5, 0, 1114145, 5, 0, 1114146, 6, 0, 1114147, 6, 0, 1114148, 6, 0, 1114149, 6, 0, 1114150, 6, 0, 1114151, 6, 0, 1114152, 6, 0, 1114153, 6, 0, 1114154, 6, 0, 1114155, 6, 0, 1114156, 6, 0, 1114157, 6, 0, 1114158, 6, 0, 1114159, 6, 0, 1114160, 6, 0, 1114161, 6, 0, 1114162, 5, 0, 1114165, 5, 0, 1114174, 5, 0, 1114180, 5, 0, 1114181, 6, 0, 1114182, 6, 0, 1114183, 6, 0, 1114184, 6, 0, 1114185, 6, 0, 1114186, 6, 0, 1114187, 5, 0, 1114195, 5, 0, 1245179, 5, 0, 1179654, 5, 0, 1179655, 6, 0, 1179656, 6, 0, 1179657, 6, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 6, 0, 1179661, 6, 0, 1179662, 6, 0, 1179663, 6, 0, 1179664, 6, 0, 1179665, 5, 0, 1179681, 5, 0, 1179682, 6, 0, 1179683, 6, 0, 1179684, 6, 0, 1179685, 6, 0, 1179686, 6, 0, 1179687, 6, 0, 1179688, 6, 0, 1179689, 6, 0, 1179690, 6, 0, 1179691, 6, 0, 1179692, 6, 0, 1179693, 6, 0, 1179694, 6, 0, 1179695, 6, 0, 1179696, 6, 0, 1179697, 6, 0, 1179698, 5, 0, 1179701, 5, 0, 1179710, 5, 0, 1179716, 5, 0, 1179717, 6, 0, 1179718, 6, 0, 1179719, 6, 0, 1179720, 6, 0, 1179721, 6, 0, 1179722, 6, 0, 1179723, 5, 0, 1179731, 5, 0, 1310715, 5, 0, 1245190, 5, 0, 1245191, 6, 0, 1245192, 6, 0, 1245193, 6, 0, 1245194, 6, 0, 1245195, 6, 0, 1245196, 6, 0, 1245197, 6, 0, 1245198, 6, 0, 1245199, 6, 0, 1245200, 6, 0, 1245201, 5, 0, 1245217, 5, 0, 1245218, 6, 0, 1245219, 6, 0, 1245220, 6, 0, 1245221, 6, 0, 1245222, 6, 0, 1245223, 6, 0, 1245224, 6, 0, 1245225, 6, 0, 1245226, 6, 0, 1245227, 6, 0, 1245228, 6, 0, 1245229, 6, 0, 1245230, 6, 0, 1245231, 6, 0, 1245232, 6, 0, 1245233, 6, 0, 1245234, 5, 0, 1245237, 5, 0, 1245246, 5, 0, 1245252, 5, 0, 1245253, 6, 0, 1245254, 6, 0, 1245255, 6, 0, 1245256, 6, 0, 1245257, 6, 0, 1245258, 6, 0, 1245259, 5, 0, 1245267, 5, 0, 1376251, 5, 0, 1310726, 5, 0, 1310727, 6, 0, 1310728, 6, 0, 1310729, 6, 0, 1310730, 6, 0, 1310731, 6, 0, 1310732, 6, 0, 1310733, 6, 0, 1310734, 6, 0, 1310735, 6, 0, 1310736, 6, 0, 1310737, 5, 0, 1310753, 5, 0, 1310754, 6, 0, 1310755, 6, 0, 1310756, 6, 0, 1310757, 6, 0, 1310758, 6, 0, 1310759, 6, 0, 1310760, 6, 0, 1310761, 6, 0, 1310762, 6, 0, 1310763, 6, 0, 1310764, 6, 0, 1310765, 6, 0, 1310766, 6, 0, 1310767, 6, 0, 1310768, 6, 0, 1310769, 6, 0, 1310770, 5, 0, 1310773, 5, 0, 1310782, 5, 0, 1310788, 5, 0, 1310789, 6, 0, 1310790, 6, 0, 1310791, 6, 0, 1310792, 6, 0, 1310793, 6, 0, 1310794, 6, 0, 1310795, 5, 0, 1310803, 5, 0, 1441787, 5, 0, 1376262, 5, 0, 1376263, 6, 0, 1376264, 6, 0, 1376265, 6, 0, 1376266, 6, 0, 1376267, 6, 0, 1376268, 6, 0, 1376269, 6, 0, 1376270, 6, 0, 1376271, 6, 0, 1376272, 6, 0, 1376273, 5, 0, 1376289, 5, 0, 1376290, 6, 0, 1376291, 6, 0, 1376292, 6, 0, 1376293, 6, 0, 1376294, 6, 0, 1376295, 6, 0, 1376296, 6, 0, 1376297, 6, 0, 1376298, 6, 0, 1376299, 6, 0, 1376300, 6, 0, 1376301, 6, 0, 1376302, 6, 0, 1376303, 6, 0, 1376304, 6, 0, 1376305, 6, 0, 1376306, 5, 0, 1376309, 5, 0, 1376318, 5, 0, 1376324, 5, 0, 1376325, 6, 0, 1376326, 6, 0, 1376327, 6, 0, 1376328, 6, 0, 1376329, 6, 0, 1376330, 6, 0, 1376331, 5, 0, 1376339, 5, 0, 1507323, 14, 0, 1507324, 0, 0, 1507325, 0, 0, 1507326, 0, 0, 1507327, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 14, 0, 1441799, 6, 0, 1441800, 6, 0, 1441801, 6, 0, 1441802, 6, 0, 1441803, 6, 0, 1441804, 6, 0, 1441805, 6, 0, 1441806, 6, 0, 1441807, 6, 0, 1441808, 6, 0, 1441809, 5, 0, 1441825, 5, 0, 1441826, 6, 0, 1441827, 6, 0, 1441828, 6, 0, 1441829, 6, 0, 1441830, 6, 0, 1441831, 6, 0, 1441832, 6, 0, 1441833, 6, 0, 1441834, 6, 0, 1441835, 6, 0, 1441836, 6, 0, 1441837, 6, 0, 1441838, 6, 0, 1441839, 6, 0, 1441840, 6, 0, 1441841, 6, 0, 1441842, 5, 0, 1441845, 5, 0, 1441854, 5, 0, 1441860, 5, 0, 1441861, 6, 0, 1441862, 6, 0, 1441863, 6, 0, 1441864, 6, 0, 1441865, 6, 0, 1441866, 6, 0, 1441867, 5, 0, 1441875, 5, 0, 1572859, 6, 0, 1572860, 6, 0, 1572861, 6, 0, 1572862, 6, 0, 1572863, 6, 0, 1507328, 6, 0, 1507329, 6, 0, 1507330, 6, 0, 1507331, 6, 0, 1507332, 6, 0, 1507333, 6, 0, 1507334, 6, 0, 1507335, 6, 0, 1507336, 6, 0, 1507337, 6, 0, 1507338, 6, 0, 1507339, 6, 0, 1507340, 6, 0, 1507341, 6, 0, 1507342, 6, 0, 1507343, 6, 0, 1507344, 6, 0, 1507345, 5, 0, 1507361, 5, 0, 1507362, 6, 0, 1507363, 6, 0, 1507364, 6, 0, 1507365, 6, 0, 1507366, 6, 0, 1507367, 6, 0, 1507368, 6, 0, 1507369, 6, 0, 1507370, 6, 0, 1507371, 6, 0, 1507372, 6, 0, 1507373, 6, 0, 1507374, 6, 0, 1507375, 6, 0, 1507376, 6, 0, 1507377, 6, 0, 1507378, 5, 0, 1507381, 5, 0, 1507390, 5, 0, 1507396, 5, 0, 1507397, 6, 0, 1507398, 6, 0, 1507399, 6, 0, 1507400, 6, 0, 1507401, 6, 0, 1507402, 6, 0, 1507403, 5, 0, 1507411, 5, 0 )

[node name="KoumissBottle1" parent="." instance=ExtResource( 9 )]
position = Vector2( -234.055, 567.16 )

[node name="KoumissBottle2" parent="." instance=ExtResource( 9 )]
position = Vector2( 488.432, -243.423 )

[node name="KoumissBottle3" parent="." instance=ExtResource( 9 )]
position = Vector2( 1037.5, -1101.83 )

[node name="KoumissBottle4" parent="." instance=ExtResource( 9 )]
position = Vector2( 5344.4, 370.723 )

[node name="MovingPlatform1" parent="." instance=ExtResource( 10 )]
position = Vector2( 1392.24, 595.406 )
move_points = [ Vector2( 0, -500 ) ]

[node name="MovingPlatform2" parent="." instance=ExtResource( 10 )]
editor/display_folded = true
position = Vector2( 763.327, -200 )
move_points = [ Vector2( 1200, 0 ) ]

[node name="Saw" parent="MovingPlatform2" instance=ExtResource( 11 )]
Radius = 150
StretchX = 1.5

[node name="MovingPlatform3" parent="." instance=ExtResource( 10 )]
position = Vector2( 2585.16, -300 )
move_points = [ Vector2( 0, -500 ) ]

[node name="MovingPlatform4" parent="." instance=ExtResource( 10 )]
position = Vector2( 2585.16, -1098.9 )
move_points = [ Vector2( 0, -500 ) ]

[node name="Target" parent="." instance=ExtResource( 12 )]
position = Vector2( 2244.77, -1241.44 )

[node name="Lever1" parent="." instance=ExtResource( 13 )]
position = Vector2( 319.866, -2188 )

[node name="Lever2" parent="." instance=ExtResource( 13 )]
position = Vector2( 1460.77, -1099.5 )

[node name="Lever3" parent="." instance=ExtResource( 13 )]
position = Vector2( 4788.44, 634.693 )

[node name="ToothDwarf1" parent="." instance=ExtResource( 14 )]
position = Vector2( 488.716, -244.149 )
is_trigon = true
Radius = 30

[node name="ToothDwarf2" parent="." instance=ExtResource( 14 )]
position = Vector2( 1758.85, -1205.71 )
move_to = Vector2( 0, -300 )

[node name="ToothDwarf3" parent="." instance=ExtResource( 14 )]
position = Vector2( 1305.57, -1564.02 )
move_to = Vector2( 0, 300 )

[node name="ToothDwarf4" parent="." instance=ExtResource( 14 )]
position = Vector2( 2581.3, -451.664 )
is_trigon = true
RotateSpeed = 0.3
Radius = 15
StretchX = 20.0
StretchY = 5.0
AngleX = 10.0
AngleY = 10.0

[node name="ToothDwarf5" parent="." instance=ExtResource( 14 )]
position = Vector2( 3642.76, 407.897 )
move_to = Vector2( 0, -400 )

[node name="ToothDwarf6" parent="." instance=ExtResource( 14 )]
position = Vector2( 4164.4, 262.843 )
move_to = Vector2( 0, -400 )

[node name="ToothWarrior1" parent="." instance=ExtResource( 15 )]
position = Vector2( 1176.83, -1852.81 )
move_to = Vector2( 600, 0 )

[node name="ToothWarrior2" parent="." instance=ExtResource( 15 )]
position = Vector2( 1811.5, -1851.97 )
move_to = Vector2( -600, 0 )

[node name="ToothWarrior3" parent="." instance=ExtResource( 15 )]
position = Vector2( 4409.73, 589.281 )

[node name="Mirza" parent="." instance=ExtResource( 16 )]
position = Vector2( -0.306389, 465.154 )
critical_y_down = 2300.0
camera_bounds = [ -200, -3500, 8500, 1500 ]

[node name="dialogue_node1" parent="." instance=ExtResource( 17 )]
position = Vector2( -6.84955, 500.019 )
actor_mirza = NodePath("../Mirza")
dialogue_lines = [ "actor_mirza", "Говорят, здесь обитают зубные карлики.", "Не удивлюсь, если Чёрные Колпаки с ними сотрудничают.", "end_dialogue" ]
[connection signal="collected" from="KoumissBottle1" to="." method="_on_koumiss_collected"]
[connection signal="collected" from="KoumissBottle2" to="." method="_on_koumiss_collected"]
[connection signal="collected" from="KoumissBottle3" to="." method="_on_koumiss_collected"]
[connection signal="collected" from="KoumissBottle4" to="." method="_on_koumiss_collected"]
[connection signal="target_shot" from="Target" to="." method="_on_target_shot"]
[connection signal="lever_pressed" from="Lever1" to="." method="_on_lever1_pressed"]
[connection signal="lever_pressed" from="Lever2" to="." method="_on_lever2_pressed"]
[connection signal="lever_pressed" from="Lever3" to="." method="_on_lever3_pressed"]
[connection signal="killed" from="ToothDwarf1" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothDwarf2" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothDwarf3" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothDwarf4" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothDwarf5" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothDwarf6" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothWarrior1" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothWarrior2" to="." method="_on_enemy_killed"]
[connection signal="killed" from="ToothWarrior3" to="." method="_on_enemy_killed"]
